--- a/EICODA/repositoryControllers/mergedTypes.yaml
+++ b/EICODA/repositoryControllers/mergedTypes.yaml
@@ -3,10 +3,13 @@ filterTypes:
   artifact: SenderArtifact
   configs:
   - name: data
+    default: '{"greeting": "Hello World"}'
   - name: interval
     default: 3000
   - name: eventType
-    default: dummy
+    default: default
+  - name: source
+    default: /default/source
 - name: Receiver
   artifact: ReceiverArtifact
 - name: Custom
@@ -16,7 +19,7 @@ filterTypes:
   - name: criteria
     file: true
   - name: mode
-    default: single
+    default: "single"
 - name: MessageFilter
   artifact: MessageFilterArtifact
   configs:
@@ -24,30 +27,42 @@ filterTypes:
     file: true
 - name: Splitter
   configs:
-  - name: criteria
-    file: true
+  - name: data
+  - name: eventType
+    default: default
+  - name: source
+    default: /default/source
 - name: Aggregator
   configs:
-  - name: criteria
-    file: true
+  - name: data
+  - name: count
+  - eventType:
+    default: default
+  - name: source
+    default: /default/source
 - name: Resequencer
   artifact: ResequencerArtifact
   configs:
   - name: count
-  - name: field
-- name: MessageTranslator
-  artifact: MessageTranslatorArtifact
+  - name: data
+- name: Translator
+  artifact: TranslatorArtifact
   configs:
   - name: criteria
     file: true
 - name: ContentFilter
   artifact: ContentFilterArtifact
   configs:
-  - name: fieldsToFilter
+  - name: data
 - name: ContentEnricher
   configs:
   - name: criteria
     file: true
+  - name: source
+- name: MessagingBridge
+  configs:
+  - name: source
+  - name: target
 - name: Backend
   artifact: BackendContainer
 deploymentArtifacts:
@@ -63,6 +78,13 @@ deploymentArtifacts:
   protocol: ""
   internalPipes:
   - in
+- name: LoggerArtifact
+  type: Docker
+  image: pstopper/eicoda-logger:latest
+  protocol: ""
+  internalPipes:
+  - in
+  - out
 - name: FlexRouterArtifact
   type: Docker
   image: pstopper/eicoda-flexrouter:latest
@@ -73,7 +95,7 @@ deploymentArtifacts:
   - outTwo
 - name: MessageFilterArtifact
   type: Docker
-  image: pstopper/eicoda-message-filter:latest
+  image: pstopper/eicoda-messagefilter:latest
   protocol: ""
   internalPipes:
   - in
@@ -85,16 +107,30 @@ deploymentArtifacts:
   internalPipes:
   - in
   - out
-- name: MessageTranslatorArtifact
+- name: TranslatorArtifact
   type: Docker
-  image: pstopper/eicoda-message-translator:latest
+  image: pstopper/eicoda-translator:latest
   protocol: ""
   internalPipes:
   - in
   - out
 - name: ContentFilterArtifact
   type: Docker
-  image: pstopper/eicoda-content-filter:latest
+  image: pstopper/eicoda-contentfilter:latest
+  protocol: ""
+  internalPipes:
+  - in
+  - out
+- name: AggregatorArtifact
+  type: Docker
+  image: pstopper/eicoda-aggregator:latest
+  protocol: ""
+  internalPipes:
+  - in
+  - out
+- name: SplitterArtifact
+  type: Docker
+  image: pstopper/eicoda-splitter:latest
   protocol: ""
   internalPipes:
   - in
