--- a/EICODA/fallstudien-deployments/studie3/laststufen/fallstudie3-5.yaml
+++ b/EICODA/fallstudien-deployments/studie3/laststufen/fallstudie3-5.yaml
@@ -16,45 +16,45 @@ filters:
 - id: 577a26d2
   name: "WebShopBackend1"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a26d
   name: "WebShopBackend2"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a26
   name: "WebShopBackend3"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a2
   name: "WebShopBackend4"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a
   name: "WebShopBackend5"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577asdfsd
   name: "WebShopBackend6"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 
 - id: 675071fa
   name: "OrderRouter1"
   host: "devKubernetes"
-  type: "Router"
-  criteria: "bla"
+  type: "FlexRouter"
+  criteria: "routing.json"
   mappings:
     - "in:OrderQueue"
     - "outOne:HighPriceQueue"
@@ -62,8 +62,8 @@ filters:
 - id: 675071f
   name: "OrderRouter2"
   host: "devKubernetes"
-  type: "Router"
-  criteria: "bla"
+  type: "FlexRouter"
+  criteria: "routing.json"
   mappings:
     - "in:OrderQueue"
     - "outOne:HighPriceQueue"
@@ -71,8 +71,8 @@ filters:
 - id: 675071jujg
   name: "OrderRouter3"
   host: "devKubernetes"
-  type: "Router"
-  criteria: "bla"
+  type: "FlexRouter"
+  criteria: "routing.json"
   mappings:
     - "in:OrderQueue"
     - "outOne:HighPriceQueue"
@@ -80,8 +80,8 @@ filters:
 - id: 675071juj
   name: "OrderRouter4"
   host: "devKubernetes"
-  type: "Router"
-  criteria: "bla"
+  type: "FlexRouter"
+  criteria: "routing.json"
   mappings:
     - "in:OrderQueue"
     - "outOne:HighPriceQueue"
@@ -89,8 +89,8 @@ filters:
 - id: 675071ju
   name: "OrderRouter5"
   host: "devKubernetes"
-  type: "Router"
-  criteria: "bla"
+  type: "FlexRouter"
+  criteria: "routing.json"
   mappings:
     - "in:OrderQueue"
     - "outOne:HighPriceQueue"
@@ -98,8 +98,8 @@ filters:
 - id: 675071j
   name: "OrderRouter6"
   host: "devKubernetes"
-  type: "Router"
-  criteria: "bla"
+  type: "FlexRouter"
+  criteria: "routing.json"
   mappings:
     - "in:OrderQueue"
     - "outOne:HighPriceQueue"
