--- a/EICODA/fallstudien-deployments/studie4/laststufen/fallstudie4-2.yaml
+++ b/EICODA/fallstudien-deployments/studie4/laststufen/fallstudie4-2.yaml
@@ -21,43 +21,43 @@ filters:
 - id: 577a26d2
   name: "WebShopBackend1"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a26d
   name: "WebShopBackend2"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a26
   name: "WebShopBackend3"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 
 - id: 675071fa
   name: "OrderTranslator1"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071f
   name: "OrderTranslator2"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071fsd
   name: "OrderTranslator3"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
@@ -65,24 +65,21 @@ filters:
 - id: e4a4a657
   name: "InvoiceRequestorA1"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4a65
   name: "InvoiceRequestorA2"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4a6
   name: "InvoiceRequestorA3"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
@@ -90,24 +87,21 @@ filters:
 - id: e4a4sadaf
   name: "InvoiceRequestorB1"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4sada
   name: "InvoiceRequestorB2"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4sad
   name: "InvoiceRequestorB3"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
@@ -115,24 +109,21 @@ filters:
 - id: e4a4a6yxg
   name: "InvoiceAggregator1"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4a6yx
   name: "InvoiceAggregator2"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4a6y
   name: "InvoiceAggregator3"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
