--- a/EICODA/fallstudien-deployments/studie4/laststufen/fallstudie4-5.yaml
+++ b/EICODA/fallstudien-deployments/studie4/laststufen/fallstudie4-5.yaml
@@ -21,85 +21,85 @@ filters:
 - id: 577a26d2
   name: "WebShopBackend1"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a26d
   name: "WebShopBackend2"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a26
   name: "WebShopBackend3"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a2
   name: "WebShopBackend4"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577a
   name: "WebShopBackend5"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 - id: 577adfa
   name: "WebShopBackend6"
   host: "devKubernetes"
-  type: "Backend"
-  mappings:
-    - "internalOrdersPipe:OrderQueue"
+  type: "Sender"
+  data: '{"product": "keyboard", "price": "499"}'
+  mappings: ["out:OrderQueue"]
 
 - id: 675071fa
   name: "OrderTranslator1"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071fasdsd
   name: "OrderTranslator2"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071fsd
   name: "OrderTranslator3"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071fs
   name: "OrderTranslator4"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071f
   name: "OrderTranslator5"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
 - id: 675071fasad
   name: "OrderTranslator6"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Translator"
+  criteria: "translation.json"
   mappings:
     - "in:OrderQueue"
     - "out:TranslatedTopic"
@@ -107,48 +107,42 @@ filters:
 - id: e4a4a657
   name: "InvoiceRequestorA1"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4a65
   name: "InvoiceRequestorA2"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4a6
   name: "InvoiceRequestorA3"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4a
   name: "InvoiceRequestorA4"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4ycgs
   name: "InvoiceRequestorA5"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a
   name: "InvoiceRequestorA6"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
@@ -156,48 +150,42 @@ filters:
 - id: e4a4sadaf
   name: "InvoiceRequestorB1"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4sada
   name: "InvoiceRequestorB2"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4sad
   name: "InvoiceRequestorB3"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4sa
   name: "InvoiceRequestorB4"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4s
   name: "InvoiceRequestorB5"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
 - id: e4a4
   name: "InvoiceRequestorB6"
   host: "devKubernetes"
-  type: "MessageTranslator"
-  criteria: "bla"
+  type: "Logger"
   mappings:
     - "in:TranslatedTopic"
     - "out:InvoiceQueue"
@@ -205,48 +193,42 @@ filters:
 - id: e4a4a6yxg
   name: "InvoiceAggregator1"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4a6yx
   name: "InvoiceAggregator2"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4a6y
   name: "InvoiceAggregator3"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4a6cygew
   name: "InvoiceAggregator4"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4aazu
   name: "InvoiceAggregator5"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
 - id: e4a4qzef
   name: "InvoiceAggregator6"
   host: "devDockerCompose"
-  type: "MessageTranslator"
-  criteria: "bla"
-  mappings:
-    - "in:InvoiceQueue"
-    - "out:ResultQueue"
+  type: "Aggregator"
+  count: 2
+  data: "message.data.product,message.data.price"
+  mappings: ["in:InvoiceQueue", "out:ResultQueue"]
