--- a/EICODA/repositoryControllers/types.yaml
+++ b/EICODA/repositoryControllers/types.yaml
@@ -40,7 +40,7 @@ filterTypes:
     configs: 
       - name: data
       - name: count
-      - eventType:
+      - name: eventType
         default: default
       - name: source
         default: /default/source
